--- a/index.css
+++ b/index.css
@@ -27,6 +27,7 @@
 .k-block-preview-fields > .k-block-title {
   --drawer-header-height: 2.5rem;
   padding: 0.75rem;
+  padding-left: 1em;
   background: var(--color-white);
   border-top-left-radius: var(--rounded);
   border-top-right-radius: var(--rounded);
